==> ConnectedDevelopment/CD_LoRaBasicsModem_Demo/ModemHAL/smtc_modem_hal.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
#include <stdarg.h>
#include <string.h>
#include <zephyr/settings/settings.h>
#include <zephyr/drivers/gpio.h>
#include <nrfx_gpiote.h>
#include "ral_sx126x_bsp.h"
#include "ralf_sx126x.h"
#include "sx126x_hal_context.h"
#include "smtc_modem_hal.h"
#include "smtc_modem_hal_dbg_trace.h"
#include "modem_context.h"
#include <zephyr/logging/log.h>
#define SETTINGS_SUBTREE_NAME                "lbm_context"
#define ADDR_FLASH_MODEM_CONTEXT             SETTINGS_SUBTREE_NAME "/modem"
#define ADDR_FLASH_LR1MAC_CONTEXT            SETTINGS_SUBTREE_NAME "/lr1mac"
#define ADDR_FLASH_DEVNONCE_CONTEXT          SETTINGS_SUBTREE_NAME "/devnonce"
#define ADDR_FLASH_SECURE_ELEMENT_CONTEXT    SETTINGS_SUBTREE_NAME "/secure_element"

void smtc_modem_hal_reset_mcu(void)
{
   k_sleep(K_MSEC(2000));
   NVIC_SystemReset();
}

uint32_t smtc_modem_hal_get_time_in_s(void)
{
   int64_t uptime64ms = k_uptime_get();
   return (uint32_t) (uptime64ms / 1000);
}

uint32_t smtc_modem_hal_get_time_in_ms(void)
{
   return (uint32_t) k_uptime_get();
}

uint32_t smtc_modem_hal_get_time_in_100us(void)
{
   int64_t uptime64us = k_ticks_to_us_floor64(k_uptime_ticks());
   return (uint32_t) (uptime64us / 100);
}

void smtc_modem_hal_start_timer(const uint32_t milliseconds, void(*callback)(void *context), void *context)
{
   LOG_DBG("Start timer for %u msec.", milliseconds);
   k_timer_init(&halTimer, HalTimerHandler, NULL);
   HalTimerCallback = callback;
   halTimerContext = context;
   k_timer_start(&halTimer, K_MSEC(milliseconds), K_NO_WAIT);
   halTimerIrqEnabled = true;
}

void smtc_modem_hal_stop_timer(void)
{
   LOG_DBG("Stop timer.");

   halTimerIrqEnabled = false;
   k_timer_stop(&halTimer);
   HalTimerCallback = NULL;
   halTimerContext = NULL;
}

void smtc_modem_hal_context_restore(const modem_context_type_t ctx_type, uint8_t *buffer, const uint32_t size)
{
   int rc = 0;
   DirectLoadParams_t directLoadParams;

   directLoadParams.fetched = false;
   directLoadParams.len = size;
   directLoadParams.dest = buffer;

   if (InitSettingsSubsys())
   {
      switch (ctx_type)
      {
         case CONTEXT_MODEM:
            rc = settings_load_subtree_direct(ADDR_FLASH_MODEM_CONTEXT,
                                              DirectLoadHandler,
                                              (void *) &directLoadParams);
            break;

         case CONTEXT_LR1MAC:
            rc = settings_load_subtree_direct(ADDR_FLASH_LR1MAC_CONTEXT,
                                              DirectLoadHandler,
                                              (void *) &directLoadParams);
            break;

         case CONTEXT_DEVNONCE:
            rc = settings_load_subtree_direct(ADDR_FLASH_DEVNONCE_CONTEXT,
                                              DirectLoadHandler,
                                              (void *) &directLoadParams);
            break;

         case CONTEXT_SECURE_ELEMENT:
            rc = settings_load_subtree_direct(ADDR_FLASH_SECURE_ELEMENT_CONTEXT,
                                              DirectLoadHandler,
                                              (void *) &directLoadParams);
            break;

         default:
            LOG_ERR("Unknown context: %u", (uint32_t) ctx_type);
            k_sleep(K_MSEC(200));
            k_panic();
            break;
      }

      if (rc != 0)
      {
         LOG_ERR("Settings Get Context %u. Error=%d", (uint32_t) ctx_type, rc);
      }
      else if (!directLoadParams.fetched)
      {
         rc = -ENOENT;
      }
      else
      {
         LOG_DBG("Context %u restored.", (uint32_t) ctx_type);
      }
   }
}

void smtc_modem_hal_context_store(const modem_context_type_t ctx_type, const uint8_t *buffer, const uint32_t size)
{
   int rc = 0;

   if (InitSettingsSubsys())
   {
      switch (ctx_type)
      {
         case CONTEXT_MODEM:
            rc = settings_save_one(ADDR_FLASH_MODEM_CONTEXT, (void *) buffer, size);
            break;

         case CONTEXT_LR1MAC:
            rc = settings_save_one(ADDR_FLASH_LR1MAC_CONTEXT, (void *) buffer, size);
            break;

         case CONTEXT_DEVNONCE:
            rc = settings_save_one(ADDR_FLASH_DEVNONCE_CONTEXT, (void *) buffer, size);
            break;

         case CONTEXT_SECURE_ELEMENT:
            rc = settings_save_one(ADDR_FLASH_SECURE_ELEMENT_CONTEXT, (void *) buffer, size);
            break;

         default:
            LOG_ERR("Unknown context: %u", (uint32_t) ctx_type);
            k_sleep(K_MSEC(200));
            k_panic();
            break;
      }

      if (rc != 0)
      {
         LOG_ERR("Settings Set Context %u. Error=%d", (uint32_t) ctx_type, rc);
      }
      else
      {
         LOG_DBG("Context %u stored.", (uint32_t) ctx_type);
      }
   }
}

void smtc_modem_hal_print_trace(const char *fmt, ...)
{
   va_list args;
   va_start(args, fmt);
   log2_generic(LOG_LEVEL_DBG, fmt, args);
   va_end(args);
}
